--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,18 +13,18 @@
         android:id="@+id/tv_status"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Card already tokenized"
+        android:text="@string/card_tokenized"
         android:gravity="center"
         android:textSize="20.sp"
         android:textColor="@color/red"
-        android:visibility="gone"/>
+        android:visibility="visible"/>
 
     <Button
         android:id="@+id/btn_start_tokenization"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="64dp"
-
+        style="@style/basic_button"
+        android:enabled="false"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="32dp"
         android:text="@string/start_tokenization">
     </Button>
 
